# ioscustomringtones

./: .gitattributes  Cargo.toml  README.md  pyoxidizer.bzl  pyproject.toml
.github/workflows/: build.yml  test.yml
data/iPhone_Media/iTunes_Control/Ringtones/: SC_Strategic_Launch.m4r  TP_Bottle_Pop.m4r  TP_HawkGrass.m4r
data/iPhone_Media/iTunes_Control/iTunes/: Ringtones.plist
example/iPhone_Media/iTunes_Control/Ringtones/: OuterWilds_End_Times.m4r  TP_Bottle_Pop.m4r
example/iPhone_Media/iTunes_Control/iTunes/: Ringtones.plist
src/: data.rs  list_tones.rs  main.rs  ringtones_plist.rs
src/ioscustomringtones/: __init__.py  __main__.py  generate.py  plist.py
