[package]
name = "ioscustomringtones"
description = "manage custom iOS alert and ring tones on an iOS device"
readme = "README.md"
license-file = "LICENSE"
keywords = ["iOS", "iPhone", "ringtone", "plist"]
repository = "https://github.com/zacharyburnett/ioscustomringtones.git"
version = "1.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.17", features = ["derive"] }
glob = "0.3.1"
lofty = "0.18.0"
plist = "1"
serde = { version = "1.0.195", features = ["derive"] }
serde_derive = "1.0.195"
sha256 = "1.5.0"
