[project]
name = "ioscustomringtones"
description = "list custom tones in iOS settings by generating `/Media/iTunes_Control/iTunes/Ringtones.plist`"
authors = [{name= "Zachary Burnett", email="zachary.r.burnett@gmail.com"}]
readme = "README.md"
license = {text= "GPLv3"}
keywords = ["iOS", "iPhone", "ringtone", "plist"]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: End Users/Desktop",
  "Topic :: File Formats",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
]
requires-python = ">=3"
dependencies = [
  "mutagen",
  "typer",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/zacharyburnett/ioscustomringtones"

[project.scripts]
write_ios_ringtones_plist = "ioscustomringtones.plist:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ioscustomringtones"]
